--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,22 +1,20 @@
-.swimlanes {
-    display: flex;
-    gap: 20px; /* Space between swimlanes */
+.vertical-menu {
+  width: 200px; /* Set a width if you like */
 }
 
-.swimlane {
-    border: 1px solid #ccc;
-    padding: 10px;
-    flex: 1; /* Makes each lane take equal space */
+.vertical-menu a {
+  background-color: #eee; /* Grey background color */
+  color: black; /* Black text color */
+  display: block; /* Make the links appear below each other */
+  padding: 12px; /* Add some padding */
+  text-decoration: none; /* Remove underline from links */
 }
 
-.steps {
-    list-style: none; /* Remove bullet points */
-    padding: 0;
-    margin: 0;
+.vertical-menu a:hover {
+  background-color: #ccc; /* Dark grey background on mouse-over */
 }
 
-.steps li {
-    border: 1px solid #eee;
-    padding: 5px;
-    margin-bottom: 5px;
+.vertical-menu a.active {
+  background-color: #04AA6D; /* Add a green color to the "active/current" link */
+  color: white;
 }
