pulling from csv not firebase

--- a/app/templates/student_details.html
+++ b/app/templates/student_details.html
@@ -23,7 +23,7 @@
 
         <tr>
     <td>Admissions Language</td>
-    <td>{{ results.matrix_language }}</td>
+    <td>{{ results.matrix_languauge }}</td>
     <td> Edit </td>
     </tr>
 
