fixed index page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,8 +30,8 @@
 <h1>Vertical Menu</h1>
 
 <div class="vertical-menu">
-  <a href="/point_inputs">Enter Matrix Points</a>
-  <a href="/exports">Exports</a>
+  <a href="/point_inputs">Review/Edit Student Scores</a>
+  <a href="/exports">csv Imports and Exports</a>
   <a href="/upcoming_tests">Upcoming Tests Info</a>
   <a href="/unresponsive_students">Unresponsive Students</a>
 </div>
