--- a/app/templates/student_details.html
+++ b/app/templates/student_details.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Student Details</h1>
     <h2>Student ID: {{ results.id }}</h2>
-    <h2>Grade: {{ results.grade }}</h2>
+    <h2>Applying for Grade: {{ results.grade }}</h2>
     <table style="width:100%">
    
     <tr>
