--- a/app/templates/enter_report_card.html
+++ b/app/templates/enter_report_card.html
@@ -5,8 +5,9 @@
 </head>
 <body>
     <h2>Enter Report Card Info</h2>
-    <h3>Student ID: {{ current_student_id }}</h3>
-    <h3>Applying for Grade: {{ current_student_grade }}</h3>
+    <h3>Student ID: {{ results.id }}</h3>
+    <h3>Applying for Grade: {{ results.grade }}</h3>
+    <h3>Current School: {{ results.school }}</h3>
     <p>Choose the Report Card Type</p>
 
     <select id="myDropdown">
