SUCCESS! student object encoded and decode to pass through flask sessions as json

--- a/app/templates/enter_report_card.html
+++ b/app/templates/enter_report_card.html
@@ -7,7 +7,7 @@
     <h2>Enter Report Card Info</h2>
     <h3>Student ID: {{ results.id }}</h3>
     <h3>Applying for Grade: {{ results.grade }}</h3>
-    <h3>Current School: {{ results.school }}</h3>
+    <h3>Current School: {{ results.current_school }}</h3>
     <p>Choose the Report Card Type</p>
 
     <select id="myDropdown">
