SCRUM-124-calc-matrix_gpa

--- a/app/templates/enter_report_card.html
+++ b/app/templates/enter_report_card.html
@@ -29,6 +29,7 @@
 
 {% if gpa is not none %}
     <h3>Calculated GPA: {{ gpa }}</h3>
+    <h3>Calculated Matrix GPA: {{ matrix_gpa }}</h3>
 {% endif %}
 
 <script>
