improvements to source code for clarity

--- a/app/templates/student_details.html
+++ b/app/templates/student_details.html
@@ -29,7 +29,7 @@
    
     <tr>
     <td>GPA Points</td>
-    <td> TODO</td>
+    <td> {{ results.gpa }}</td>
     <td>{{ results.matrix_gpa }}</td>
     <td> <a href="/enter_report_card">Edit</a> </td>
     </tr>
