--- a/app/templates/enter_report_card.html
+++ b/app/templates/enter_report_card.html
@@ -5,8 +5,6 @@
 </head>
 <body>
       <body>
-<h2>Enter Report Card Info</h2>
-
     <h2>Enter Report Card Info</h2>
     <h3>Student ID: {{ current_student_id }}</h3>
     <h3>Applying for Grade: {{ current_student_grade }}</h3>
@@ -35,9 +33,9 @@
     <h3>Calculated Matrix GPA: {{ matrix_gpa }}</h3>
 {% endif %}
 
-{% if gpa is not none %}
-<form method="POST" action="{{ url_for('main.save_report_card') }}">
-    <button type="submit">Save to File</button>
+{% if matrix_gpa is not none %}
+<form method="POST" action="{{ url_for('main.save_matrix_gpa_to_profile') }}">
+    <button type="submit">Save to Profile</button>
 </form>
 {% endif %}
 
