--- a/app/templates/enter_report_card.html
+++ b/app/templates/enter_report_card.html
@@ -17,6 +17,7 @@
     <option value="quarters">Quarters</option>
     </select>
 
+
 <!-- Content will be loaded here -->
 <form method="POST" action="/calculate_gpa">
     <input type="text" name="english" placeholder="English Grade" value="{{ grades.english }}" required><br><br>
@@ -25,12 +26,28 @@
     <input type="text" name="social_studies" placeholder="Social Studies Grade" value="{{ grades.social_studies }}" required><br><br>
     <input type="text" name="language" placeholder="Language Grade" value="{{ grades.language }}"><br><br>
 
-    <button type="submit">Submit</button>
+    <button type="submit">Calculate GPA</button>
 </form>
 
+
 {% if gpa is not none %}
-    <h3>Calculated GPA: {{ gpa }}</h3>
+      <h3>Calculated GPA: {{ gpa }}</h3>
+      <h3>Calculated Matrix GPA: {{ matrix_gpa }}</h3>
 {% endif %}
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <div class="flash-messages">
+      {% for message in messages %}
+        <div style="background-color: #d1e7dd; color: #0f5132; padding: 10px; border-radius: 4px; margin-bottom: 10px;">
+          {{ message }}
+        </div>
+      {% endfor %}
+    </div>
+          <button type="submit", onclick="location.href='/student_details/';">Return to Student Scores</button>
+  {% endif %}
+{% endwith %}
+
 
 <script>
   const dropdown = document.getElementById('myDropdown');
@@ -45,7 +62,7 @@
   console.log("student grade:", studentGrade)
 
 
-
+    
 
   dropdown.addEventListener('change', function() {
     const selectedValue = this.value;
@@ -139,5 +156,6 @@
     }
   });
 </script>
+
 </body>
 </html>
